docs: sync translations

--- a/website/i18n/fr/docusaurus-plugin-content-docs/current/community/templates.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-docs/current/community/templates.mdx
@@ -47,6 +47,11 @@ Si vous n'êtes pas sûr d'un modèle, inspectez `package.json` et `wails.json` 
 - [wails-vite-svelte-tailwind-template](https://github.com/BillBuilt/wails-vite-svelte-tailwind-template) - Un modèle utilisant Svelte et Vite avec TailwindCSS v3
 - [wails-sveltekit-template](https://github.com/h8gi/wails-sveltekit-template) - Un modèle utilisant SvelteKit
 
+## Solid
+
+- [wails-template-vite-solid-ts](https://github.com/xijaja/wails-template-solid-ts) - A template using Solid + Ts + Vite
+- [wails-template-vite-solid-js](https://github.com/xijaja/wails-template-solid-js) - A template using Solid + Js + Vite
+
 ## Elm
 
 - [wails-elm-template](https://github.com/benjamin-thomas/wails-elm-template) - Développez votre application GUI avec de la programmation fonctionnelle et une configuration de développement en direct :tada: :rocket:
