--- a/website/i18n/ja/docusaurus-plugin-content-docs/current/guides/routing.mdx
+++ b/website/i18n/ja/docusaurus-plugin-content-docs/current/guides/routing.mdx
@@ -27,7 +27,7 @@ RouterModule.forRoot(routes, { useHash: true });
 
 ## React
 
-Reactにおいてルーティングで推奨されるアプローチは、[HashRouter](https://reactrouter.com/docs/en/v6/routers/hash-router)となります:
+The recommended approach for routing in React is [HashRouter](https://reactrouter.com/en/main/router-components/hash-router):
 
 ```jsx
 import { HashRouter } from "react-router-dom";
